Fixed bug with vertical alignment as a link in Safari

--- a/styles/common/button/button.less
+++ b/styles/common/button/button.less
@@ -1,7 +1,8 @@
 .button {
     --color-light: 50%;
     --color: hsl(206, 88%, var(--color-light));
-    display: inline-block;
+    display: inline-flex;
+    align-items: center;
     height: 38px;
     padding: 0 15px;
     background-color: var(--color);
@@ -16,11 +17,13 @@
     transition-timing-function: linear;
     transition-property: background-color;
 
-    &:hover, &_hover {
+    &:hover,
+    &_hover {
         --color-light: 40%;
     }
 
-    &:active, &_pressed {
+    &:active,
+    &_pressed {
         --color-light: 35%;
         box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2) inset;
     }
